appId: host.exp.exponent
---
- launchApp
- tapOn: "task-manager"
- extendedWaitUntil:
    visible: "Nueva tarea"
    timeout: 20000
- assertVisible: "Nueva tarea"
- tapOn:
    id: "input-titulo"
- inputText: "Mi primera tarea de prueba"
- tapOn: "Guardar"
- assertVisible: "Tarea creada exitosamente"